--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 .app {
   min-height: 100vh;
+  background-color: #f7f6f5
+
 }
+
+
+.btn {
+  border-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 3px 6px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+
