--- a/src/screens/MainScreen.css
+++ b/src/screens/MainScreen.css
@@ -1,12 +1,33 @@
 .main-screen {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
 .main-screen-contents {
-  border: 1px solid red;
   margin: auto;
   margin-top: 50px;
-  width: 50%;
+  width: 80%;
+  margin-left: 20px;
+  margin-right: 20px;
 
+}
+
+.product-controls {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  margin: 8px;
+}
+
+.product-results {
+  font-size: 20px;
+}
+
+.products-section {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
 }
